<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/lblNumero"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.9"
            android:gravity="center"
            android:paddingRight="@dimen/margin_1"
            android:background="@drawable/barra_clara"
            android:text="@string/nro_bandeja"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="?android:textColorSecondary"
            android:textSize="@dimen/text_1"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/lblNombres"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.7"
            android:gravity="center"
            android:paddingRight="@dimen/margin_1"
            android:background="@drawable/barra_clara"
            android:text="@string/nombres_ficha"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="?android:textColorSecondary"
            android:textSize="@dimen/text_1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblEdad"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.9"
            android:gravity="center"
            android:background="@drawable/barra_clara"
            android:text="@string/edad_inripcion"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="?android:textColorSecondary"
            android:textSize="@dimen/text_1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblSexo"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.9"
            android:gravity="center"
            android:background="@drawable/barra_clara"
            android:text="@string/sexo_inripcion"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="?android:textColorSecondary"
            android:textSize="@dimen/text_1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblProfesion"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.7"
            android:gravity="center"
            android:background="@drawable/barra_clara"
            android:text="@string/profesion_inripcion"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="?android:textColorSecondary"
            android:textSize="@dimen/text_1"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/lblCargo"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.7"
            android:gravity="center"
            android:background="@drawable/barra_clara"
            android:text="@string/cargo_inscripcion_anexo_1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="?android:textColorSecondary"
            android:textSize="@dimen/text_1"
            android:textStyle="bold" />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_eliminarr"
            android:layout_marginRight="@dimen/margin_1"
            android:gravity="center"
            android:layout_weight="0.8"
            android:textSize="@dimen/text_3"
            android:textColor="?android:textColorTertiary"
            android:background="@drawable/button_grey"
            android:id="@+id/btnEliminar" />


    </LinearLayout>

</LinearLayout>